--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "locizify",
   "version": "0.0.3",
   "description": "backend layer for i18next using locize service ",
-  "main": "./lib/index.js",
+  "main": "dist/commonjs/index.js",
+  "jsnext:main": "dist/es/index.js",
   "keywords": [
     "locizify"
   ],
@@ -13,37 +14,39 @@
     "url": "git://github.com/locize/locizify.git"
   },
   "dependencies": {
-    "i18next-browser-languagedetector": "0.0.14",
-    "i18nextify": "0.0.2",
-    "locize": "0.0.3"
+    "i18next-browser-languagedetector": "0.2.0",
+    "i18next-locize-backend": "0.0.2",
+    "i18nextify": "0.1.0",
+    "i18next": "2.3.0"
   },
   "devDependencies": {
-    "babel-cli": "6.0.0",
+    "babel-cli": "6.6.5",
     "babel-core": "6.4.5",
-    "babel-eslint": "5.0.0-beta6",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-stage-0": "6.3.13",
-    "babel-register": "6.4.3",
-    "babelify": "7.2.0",
-    "browserify": "13.0.0",
-    "chai": "3.5.0",
-    "coveralls": "2.11.6",
-    "eslint": "1.10.3",
-    "i18next": "2.0.26",
-    "isparta": "4.0.0",
-    "mocha": "2.4.5",
-    "uglifyify": "3.0.1"
+    "babel-eslint": "6.0.0-beta.5",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-es2015-rollup": "1.1.1",
+    "babel-preset-stage-0": "6.5.0",
+    "eslint": "2.2.0",
+    "eslint-config-airbnb": "6.0.2",
+    "mkdirp": "0.5.1",
+    "rimraf": "2.5.2",
+    "rollup": "0.25.4",
+    "rollup-plugin-babel": "2.4.0",
+    "rollup-plugin-commonjs": "^2.2.1",
+    "rollup-plugin-npm": "1.4.0",
+    "rollup-plugin-uglify": "0.2.0",
+    "yargs": "4.1.0"
   },
   "scripts": {
-    "tdd": "mocha test/*.js --compilers js:babel-register --watch",
-    "test": "mocha test/*.js --compilers js:babel-register",
-    "coverage": "babel-node node_modules/.bin/isparta cover _mocha",
-    "coveralls": "npm run coverage && coveralls < coverage/lcov.info",
-    "transpile": "babel src -d lib",
-    "browserify": "browserify ./src/index.js --outfile ./bin/index.js -g uglifyify -t babelify -s locizify",
-    "copy": "cp ./bin/index.js ./locizify.min.js",
-    "build": "npm run transpile && npm run browserify && npm run copy",
-    "version": "npm run build",
+    "clean": "rimraf dist && mkdirp dist",
+    "copy": "cp ./dist/umd/locizify.min.js ./locizify.min.js && cp ./dist/umd/locizify.js ./locizify.js",
+    "build:es": "BABEL_ENV=es babel src --out-dir dist/es",
+    "build:cjs": "babel src --out-dir dist/commonjs",
+    "build:umd": "rollup -c rollup.config.js --format umd && rollup -c rollup.config.js --format umd --uglify",
+    "build:amd": "rollup -c rollup.config.js --format amd && rollup -c rollup.config.js --format umd --uglify",
+    "build:iife": "rollup -c rollup.config.js --format iife && rollup -c rollup.config.js --format iife --uglify",
+    "build": "npm run clean && npm run build:cjs && npm run build:es && npm run build:umd && npm run copy",
+    "preversion": "npm run build && git push",
     "postversion": "git push && git push --tags"
   },
   "author": "Jan Mühlemann <jan.muehlemann@gmail.com> (https://github.com/jamuhl)",
