--- a/package.json
+++ b/package.json
@@ -14,17 +14,15 @@
     "url": "git://github.com/locize/locizify.git"
   },
   "dependencies": {
-    "i18next-browser-languagedetector": "0.2.0",
-    "i18next-locize-backend": "0.0.2",
-    "i18nextify": "0.1.1",
-    "i18next": "2.3.1"
+    "i18next-locize-backend": "0.0.3",
+    "i18nextify": "0.1.3"
   },
   "devDependencies": {
     "babel-cli": "6.6.5",
     "babel-core": "6.4.5",
     "babel-eslint": "6.0.0-beta.5",
-    "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-es2015": "6.6.0",
+    "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-es2015-rollup": "1.1.1",
     "babel-preset-stage-0": "6.5.0",
     "eslint": "2.2.0",
