--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "i18next-locize-backend": "0.2.0",
-    "i18nextify": "0.8.0"
+    "i18nextify": "0.9.0"
   },
   "devDependencies": {
     "aws-sdk": "2.3.7",
@@ -28,6 +28,7 @@
     "babel-preset-stage-0": "6.5.0",
     "eslint": "2.2.0",
     "eslint-config-airbnb": "6.0.2",
+    "eslint-plugin-react": "^5.1.1",
     "mkdirp": "0.5.1",
     "rimraf": "2.5.2",
     "rollup": "0.25.4",
