--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "locizify",
   "version": "1.6.1",
-  "description": "backend layer for i18next using locize service ",
+  "description": "main script for using locize service in frontend",
   "main": "dist/commonjs/index.js",
   "jsnext:main": "dist/es/index.js",
   "keywords": [
-    "locizify"
+    "locizify",
+    "locize",
+    "internationalization",
+    "localization",
+    "i18n",
+    "l10n",
   ],
   "homepage": "https://github.com/locize/locizify",
   "bugs": "https://github.com/locize/locizify/issues",
@@ -15,26 +20,26 @@
   },
   "dependencies": {
     "i18next-locize-backend": "1.0.0",
-    "i18nextify": "1.5.1"
+    "i18nextify": "2.0.0"
   },
   "devDependencies": {
-    "aws-sdk": "2.7.16",
-    "babel-cli": "6.18.0",
-    "babel-core": "6.21.0",
+    "aws-sdk": "2.16.0",
+    "babel-cli": "6.23.0",
+    "babel-core": "6.23.1",
     "babel-eslint": "7.1.1",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-stage-0": "6.16.0",
-    "eslint": "3.12.2",
-    "eslint-config-airbnb": "13.0.0",
-    "eslint-plugin-react": "6.8.0",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-stage-0": "6.22.0",
+    "eslint": "3.16.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-plugin-react": "6.10.0",
     "mkdirp": "0.5.1",
-    "rimraf": "2.5.4",
-    "rollup": "0.37.0",
+    "rimraf": "2.6.0",
+    "rollup": "0.41.4",
     "rollup-plugin-babel": "2.7.1",
-    "rollup-plugin-commonjs": "6.0.0",
+    "rollup-plugin-commonjs": "7.0.0",
     "rollup-plugin-node-resolve": "2.0.0",
     "rollup-plugin-uglify": "1.0.1",
-    "yargs": "6.5.0"
+    "yargs": "6.6.0"
   },
   "scripts": {
     "clean": "rimraf dist && mkdirp dist",
