--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "main script for using locize service in frontend",
   "main": "dist/commonjs/index.js",
   "jsnext:main": "dist/es/index.js",
+  "browser": "locizify.min.js",
   "keywords": [
     "locizify",
     "locize",
