--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locizify",
-  "version": "2.11.0",
+  "version": "2.12.0",
   "description": "main script for using locize service in frontend",
   "main": "dist/commonjs/index.js",
   "jsnext:main": "dist/es/index.js",
@@ -20,9 +20,9 @@
     "url": "git://github.com/locize/locizify.git"
   },
   "dependencies": {
-    "i18next-locize-backend": "1.9.0",
+    "i18next-locize-backend": "^1.9.0",
     "i18nextify": "2.4.0",
-    "locize-editor": "1.6.0"
+    "locize-editor": "2.0.0"
   },
   "devDependencies": {
     "aws-sdk": "2.22.0",
