--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,14 @@
 {
   "env": {
     "development": {
-      "presets": [ "es2015", "stage-0" ]
-    },
-    "rollup": {
-      "presets": [ ["es2015", { "modules": false }], "stage-0"  ]
+      "presets": ["@babel/preset-env"],
+      "plugins": ["@babel/plugin-transform-runtime"]
     },
     "jsnext": {
-      "presets": [ ["es2015", { "modules": false }], "stage-0"  ]
+      "presets": [
+        ["@babel/preset-env", { "modules": false, "useBuiltIns": false }]
+      ],
+      "plugins": ["@babel/plugin-transform-runtime"]
     }
   }
 }
