--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locizify",
-  "version": "2.15.0",
+  "version": "2.15.1",
   "description": "main script for using locize service in frontend",
   "main": "dist/commonjs/index.js",
   "jsnext:main": "dist/es/index.js",
@@ -20,28 +20,39 @@
     "url": "git://github.com/locize/locizify.git"
   },
   "dependencies": {
-    "i18next-locize-backend": "^2.1.0",
-    "i18nextify": "^2.5.4",
+    "i18next-locize-backend": "^2.2.2",
+    "i18nextify": "^2.5.6",
     "locize-editor": "^2.2.2"
   },
   "devDependencies": {
     "aws-sdk": "2.22.0",
-    "babel-cli": "6.23.0",
-    "babel-core": "6.23.1",
-    "babel-eslint": "7.1.1",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-stage-0": "6.22.0",
-    "eslint": "3.16.1",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-plugin-react": "6.10.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-async-generator-functions": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "eslint": "6.7.2",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.17.0",
+    "html-to-vdom": "^0.7.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
     "mkdirp": "0.5.1",
-    "rimraf": "2.6.1",
-    "rollup": "0.41.4",
-    "rollup-plugin-babel": "2.7.1",
-    "rollup-plugin-commonjs": "7.0.0",
-    "rollup-plugin-node-resolve": "2.0.0",
-    "rollup-plugin-uglify": "1.0.1",
-    "yargs": "6.6.0"
+    "rimraf": "3.0.0",
+    "rollup": "1.27.8",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-terser": "^5.1.1",
+    "yargs": "15.0.2"
   },
   "scripts": {
     "clean": "rimraf dist && mkdirp dist",
