--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locizify",
-  "version": "2.15.1",
+  "version": "3.0.0",
   "description": "main script for using locize service in frontend",
   "main": "dist/commonjs/index.js",
   "jsnext:main": "dist/es/index.js",
@@ -20,9 +20,9 @@
     "url": "git://github.com/locize/locizify.git"
   },
   "dependencies": {
-    "i18next-locize-backend": "^2.2.2",
-    "i18nextify": "^2.5.6",
-    "locize-editor": "^2.2.2"
+    "i18next-locize-backend": "3.0.0",
+    "i18nextify": "2.5.6",
+    "locize-editor": "3.0.0"
   },
   "devDependencies": {
     "aws-sdk": "2.22.0",
