--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
-    "i18next": "^2.0.4",
-    "i18next-express-middleware": "^0.1.1",
-    "i18next-node-fs-backend": "0.0.6"
+    "i18next": "^19.4.3",
+    "i18next-http-middleware": "1.0.0",
+    "i18next-fs-backend": "1.0.1"
   }
 }
