--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
-    "i18next": "^19.4.3",
-    "i18next-http-middleware": "1.0.0",
-    "i18next-fs-backend": "1.0.1"
+    "i18next": "19.4.5",
+    "i18next-http-middleware": "2.1.2",
+    "i18next-fs-backend": "1.0.6"
   }
 }
