--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "i18next-locize-backend": "4.1.8",
     "i18nextify": "2.5.11",
-    "locize-editor": "3.0.2"
+    "locize": "2.2.1",
+    "locize-editor": "3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
