--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "url": "git://github.com/locize/locizify.git"
   },
   "dependencies": {
-    "i18next-locize-backend": "4.2.3",
-    "i18nextify": "3.0.2",
-    "locize": "2.2.4",
-    "locize-editor": "3.1.1"
+    "i18next-locize-backend": "4.2.7",
+    "i18nextify": "3.0.3",
+    "locize": "2.2.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
