--- a/package.json
+++ b/package.json
@@ -20,39 +20,38 @@
     "url": "git://github.com/locize/locizify.git"
   },
   "dependencies": {
-    "i18next-locize-backend": "7.0.4",
+    "i18next-locize-backend": "7.1.0",
     "i18nextify": "4.0.0",
     "locize": "4.0.14"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.19.3",
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
     "@babel/plugin-proposal-async-generator-functions": "^7.19.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
+    "@babel/plugin-transform-runtime": "^7.28.5",
     "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.19.3",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/register": "^7.18.9",
-    "aws-sdk": "2.1230.0",
-    "eslint": "7.13.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.8",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/register": "^7.28.3",
+    "eslint": "8.53.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
     "html-to-vdom": "^0.7.0",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "mkdirp": "0.5.1",
-    "rimraf": "3.0.2",
+    "jest": "^30.2.0",
+    "jest-cli": "^30.2.0",
+    "mkdirp": "3.0.1",
+    "rimraf": "6.1.2",
     "rollup": "1.27.8",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-terser": "^5.1.1",
-    "yargs": "15.0.2"
+    "yargs": "18.0.0"
   },
   "scripts": {
     "clean": "rimraf dist && mkdirp dist",
@@ -64,9 +63,7 @@
     "build:iife": "rollup -c rollup.config.js --format iife && rollup -c rollup.config.js --format iife --uglify",
     "build": "npm run clean && npm run build:cjs && npm run build:es && npm run build:umd && npm run copy",
     "preversion": "npm run build && git push",
-    "postversion": "git push && git push --tags",
-    "deploy": "node deployment/upload.js",
-    "deploy_prod": "DEPLOY_TYPE=prod node deployment/upload.js"
+    "postversion": "git push && git push --tags"
   },
   "author": "Jan Mühlemann <jan.muehlemann@gmail.com> (https://github.com/jamuhl)",
   "license": "MIT"
